--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,51 @@
-<h1>
-  {{title}}
-</h1>
-<router-outlet></router-outlet>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<div class="container">
+  <div id="Checkout" class="inline">
+    <h1>Pay Invoice</h1>
+    <div class="card-row">
+      <span class="visa"></span>
+      <span class="mastercard"></span>
+      <span class="amex"></span>
+      <span class="discover"></span>
+    </div>
+    <form>
+      <div class="form-group">
+        <label>Payment amount</label>
+        <div class="amount-placeholder">
+          <span>$</span>
+          <span>500.00</span>
+        </div>
+      </div>
+      <div class="form-group">
+        <label or="NameOnCard">Name on card</label>
+        <input id="NameOnCard" class="form-control" type="text" maxlength="255" #cardName/>
+      </div>
+      <div class="form-group">
+        <label for="CreditCardNumber">Card number</label>
+        <input id="CreditCardNumber" class="null card-image form-control" type="text"/>
+      </div>
+      <div class="expiry-date-group form-group">
+        <label for="ExpiryDate">Expiry date</label>
+        <input id="ExpiryDate" class="form-control" type="text" placeholder="MM / YY" maxlength="7"/>
+      </div>
+      <div class="security-code-group form-group">
+        <label for="SecurityCode">Security code</label>
+        <div class="input-container" >
+          <input id="SecurityCode" class="form-control" type="text"/>
+          <i id="cvc" class="fa fa-question-circle"></i>
+        </div>
+        <div class="cvc-preview-container two-card hide">
+          <div class="amex-cvc-preview"></div>
+          <div class="visa-mc-dis-cvc-preview"></div>
+        </div>
+      </div>
+      <button id="PayButton" class="btn btn-block btn-success submit-button" type="submit">
+        <span class="submit-button-lock"></span>
+        <span class="align-middle">Pay $500.00</span>
+      </button>
+    </form>
+  </div>
+</div>
