--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,37 +4,28 @@
 
 <div class="container">
   <div id="Checkout" class="inline">
-    <h1>Pay Invoice</h1>
+    <h1>Платежный шлюз "Добро"</h1>
     <div class="card-row">
       <span class="visa"></span>
       <span class="mastercard"></span>
-      <span class="amex"></span>
-      <span class="discover"></span>
     </div>
-    <form>
+    <form (ngSubmit)="addCard(nameOnCard.value, creditCardNumber.value, expiryDate.value, amount.value)">
       <div class="form-group">
-        <label>Payment amount</label>
-        <div class="amount-placeholder">
-          <span>$</span>
-          <span>500.00</span>
-        </div>
-      </div>
-      <div class="form-group">
-        <label or="NameOnCard">Name on card</label>
-        <input id="NameOnCard" class="form-control" type="text" maxlength="255" #cardName/>
+        <label for="NameOnCard">Name on card</label>
+        <input id="NameOnCard" class="form-control" type="text" maxlength="255" #nameOnCard/>
       </div>
       <div class="form-group">
         <label for="CreditCardNumber">Card number</label>
-        <input id="CreditCardNumber" class="null card-image form-control" type="text"/>
+        <input id="CreditCardNumber" class="null card-image form-control" type="text" #creditCardNumber/>
       </div>
       <div class="expiry-date-group form-group">
         <label for="ExpiryDate">Expiry date</label>
-        <input id="ExpiryDate" class="form-control" type="text" placeholder="MM / YY" maxlength="7"/>
+        <input id="ExpiryDate" class="form-control" type="text" placeholder="MM / YY" maxlength="7" #expiryDate/>
       </div>
       <div class="security-code-group form-group">
         <label for="SecurityCode">Security code</label>
         <div class="input-container" >
-          <input id="SecurityCode" class="form-control" type="text"/>
+          <input id="SecurityCode" class="form-control" type="text" #SecurityCode/>
           <i id="cvc" class="fa fa-question-circle"></i>
         </div>
         <div class="cvc-preview-container two-card hide">
@@ -42,9 +33,13 @@
           <div class="visa-mc-dis-cvc-preview"></div>
         </div>
       </div>
+      <div class="form-group">
+        <label for="amount">Payment amount</label>
+        <input id="amount" class="form-control" type="text" maxlength="20" #amount/>
+      </div>
       <button id="PayButton" class="btn btn-block btn-success submit-button" type="submit">
         <span class="submit-button-lock"></span>
-        <span class="align-middle">Pay $500.00</span>
+        <span class="align-middle">Pay</span>
       </button>
     </form>
   </div>
